# longread

./: .gitignore  README.md
assets/changelog/: Changelog.md
assets/docker/: Dockerfile
assets/pipeline/: longread.mermaid
assets/schema/: nextflow_schema.json
assets/scripts/: longread.sh
docs/: usage.md
modules/longread/: Cargo.toml  Dockerfile  README.md
modules/longread/src/: error.rs  events.rs  fusion.rs  generate.rs  io.rs  lib.rs  main.rs  model.rs  pbsim.rs  prepare.rs  report.rs  rng.rs  split.rs  validate.rs
modules/longread/src/expression/: alloc.rs  gmm.rs  mod.rs  zipf.rs
modules/longread/src/pacbio/: check.rs  mod.rs  normalize.rs
modules/longread/tests/: pacbio.rs  prepare_e2e.rs  property.rs  validation.rs
src/: main.nf  nextflow.config  params.json
src/modules/local/bamtofa/: main.nf
src/modules/local/isoseq/cluster2/: main.nf
src/modules/local/longread/pbsim3/: main.nf
src/modules/local/longread/prepare/: main.nf
src/modules/local/longread/split/: main.nf
src/modules/local/merge_ccs/: main.nf
src/modules/local/merge_subreads/: main.nf
src/modules/local/pacbio/normalize_rg/: main.nf
src/modules/local/pacbio/validate_ccs_chunks/: main.nf
src/modules/local/pbccs/: main.nf
src/modules/local/pbsim3/: main.nf
src/modules/local/pbtk/pbindex/: main.nf
src/modules/local/publish/: main.nf
src/modules/local/validate_bam/: main.nf
src/subworkflows/: prepare_transcriptome.nf  process_isoseq.nf  simulate_subreads.nf
src/workflows/: longread.nf
tests/data/: genome.fa  mini.bed  mini.transcript_gene.tsv
(+2 files in other folders)
