[package]
name = "longread"
version = "0.0.6"
edition = "2021"
description = "Simulate PacBio Iso-Seq reads at scale"
license = "MIT"
repository = "https://github.com/hillerlab/longread"
rust-version = "1.81"

[[bin]]
name = "longread"
path = "src/main.rs"

[lib]
name = "longread"
path = "src/lib.rs"

[dependencies]
genepred = { version = "=0.0.16", default-features = false, features = ["std", "gzip", "mmap", "rayon"] }
clap = { version = "4.5", features = ["derive"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
rand_chacha = "0.3.1"
rand_distr = "0.4.3"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
noodles-bam = "0.79"
noodles-sam = "0.75"
noodles-bgzf = { version = "0.39", features = ["libdeflate"] }
md-5 = "0.10"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
